@@ -4,6 +4,7 @@ Tue Jul 15 2014
    * Be able to specify the level name (e.g. school|cons + standlrt) instead of just the level number (e.g. 2|cons + standlrt)
    * Omit 0| for all the cases except for that both 0| and 0|| exists in the formula.
    * Allow attached data to be picked up when running a model
+   * Automatically convert logical/factor variables used as the response for Binomial models
 
 Mon Jun 30 2014
 1. Bug fixing
